# xplane-plugin-template

./: meson.build
scripts/: regenerate_sdk_patch.sh
src/: meson.build  plugin.cpp
subprojects/: xpsdk.wrap
